--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <!-- Vaadin project from https://start.vaadin.com/project/fed49efe-3435-4d4b-b2b1-761e5bfdbf63 -->
+    
     <groupId>com.example.application</groupId>
-    <artifactId>sentimentsanalyzer</artifactId>
+    <artifactId>sentiments-analyzer</artifactId>
     <name>Sentiments analyzer</name>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
