Prepare the app to a basic deploy on Microsoft Azure Containers (https://docs.microsoft.com/es-es/azure/developer/java/spring-framework/deploy-spring-boot-java-app-on-linux)

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
     <groupId>com.wordpress.fcosfc.poc.nlp</groupId>
@@ -19,6 +19,9 @@
     <properties>
         <java.version>11</java.version>
         <vaadin.version>14.8.0</vaadin.version>
+        <vaadin.productionMode>true</vaadin.productionMode>
+        <jib-maven-plugin.version>3.1.1</jib-maven-plugin.version>
+        <docker.image.prefix>fsaucedo.azurecr.io</docker.image.prefix>
     </properties>
 
     <parent>
@@ -154,7 +157,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <!-- Clean build and startup time for Vaadin apps sometimes may exceed
-                     the default Spring Boot's 30sec timeout.  -->
+                the default Spring Boot's 30sec timeout.  -->
                 <configuration>
                     <wait>500</wait>
                     <maxAttempts>240</maxAttempts>
@@ -178,6 +181,21 @@
                     </execution>
                 </executions>
             </plugin>
+            
+            <plugin>
+                <artifactId>jib-maven-plugin</artifactId>
+                <groupId>com.google.cloud.tools</groupId>
+                <version>${jib-maven-plugin.version}</version>
+                <configuration>
+                    <from>
+                        <image>mcr.microsoft.com/openjdk/jdk:17-ubuntu</image>
+                    </from>
+                    <to>
+                        <image>${docker.image.prefix}/${project.artifactId}</image>
+                    </to>                    
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
@@ -200,7 +218,7 @@
                             </execution>
                         </executions>
                         <configuration>
-                             <productionMode>true</productionMode>
+                            <productionMode>true</productionMode>
                             <pnpmEnable>false</pnpmEnable>
                         </configuration>
                     </plugin>
