--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <properties>
         <java.version>11</java.version>
         <vaadin.version>14.8.0</vaadin.version>
-        <vaadin.productionMode>true</vaadin.productionMode>
+        <vaadin.productionMode>false</vaadin.productionMode>
         <jib-maven-plugin.version>3.1.1</jib-maven-plugin.version>
         <docker.image.prefix>fsaucedo.azurecr.io</docker.image.prefix>
     </properties>
