Development database adjustments

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,9 @@ logging.level.org.atmosphere = warn
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,com.example.application
 vaadin.pnpm.enable = false
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=${DATASOURCE_URL:jdbc:h2:mem:testdb}
+spring.datasource.driverClassName=${DATASOURCE_DRIVER:org.h2.Driver}
+spring.datasource.username=${DATASOURCE_USERNAME:sa}
+spring.datasource.password=${DATASOURCE_PASSWORD:password}
+spring.jpa.database-platform=${JPA_DATABASE_PLATFORM:org.hibernate.dialect.H2Dialect}
+spring.jpa.hibernate.ddl-auto=create
